--- a/kencarson.css
+++ b/kencarson.css
@@ -8,7 +8,7 @@ body {
 }
 
 .header {
-    background: linear-gradient(90deg, #ff007f, #000000);
+    background: linear-gradient(90deg, #ff007f, #7f00ff);
     color: white;
     text-align: center;
     padding: 20px;
@@ -20,7 +20,7 @@ body {
 }
 
 .header:hover {
-    background: linear-gradient(90deg, #220144, #ff007f);
+    background: linear-gradient(90deg, #7f00ff, #ff007f);
 }
 
 .container {
@@ -42,24 +42,29 @@ a:hover {
 
 .logo {
     width: 120px;
-    position: absolute;
-    top: 20px;
-    left: 50%;
-    transform: translateX(-50%);
+    position: fixed;
+    top: 50px;
+    right: 20px;
     animation: moveLogo 3s infinite alternate ease-in-out;
 }
 
 @keyframes moveLogo {
     0% {
-        transform: translateX(-50%) translateY(0);
+        transform: translateY(0);
     }
     100% {
-        transform: translateX(-50%) translateY(20px);
+        transform: translateY(20px);
+        border-right: #111;
     }
 }
 
-canvas {
-    background-color: #222;
-    padding: 10px;
+.chart-container {
+    text-align: center;
+    margin-top: 20px;
+}
+
+.chart-container img {
+    max-width: 100%;
+    height: auto;
     border-radius: 10px;
 }
